# android-pyrunner

./: build.gradle  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pyrunner_native.c
app/src/main/java/com/example/pyrunner/: MainActivity.kt  PythonEngine.kt  SyntaxHighlighter.kt
app/src/main/python/: app_runner.py
app/src/main/res/drawable/: bg_console.xml  bg_editor.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
